src/tests/fixtures/interfaces/classInterfaceNamedQuery.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInterface */
class Query {
  /** @gqlField */
  field: string;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/interfaces/classInterfaceNamedQuery.invalid.ts:2:1 - error: Query root type must be Object type, it cannot be Query.

2 class Query {
  ~~~~~~~~~~~~~
3   /** @gqlField */
  ~~~~~~~~~~~~~~~~~~
4   field: string;
  ~~~~~~~~~~~~~~~~
5 }
  ~
